# mlx-triage

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  METHODOLOGY.md  PROJECT-SPEC.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  mlx-bug-report.yml
.github/workflows/: ci.yml
_docs/mlx-knowledge/: INDEX.md
docs/: agents.md  current-state.md  roadmap.md  validation-results.md
docs/assets/: demo.tape
docs/context/: About the mlx-triage spec.md  After Submission of C1 Research Artifacts.md  After Submission of C2 Research Artifacts.md  c1-cross-model-synthesis.md  c2-cross-model-synthesis.md
docs/evidence/: How the UI Assistant Project connects to mlx-triage as evidence.md  claude-c1-infrastructure-defects.md  experiment-consolidation.md  first-party-experiment-analysis.md  gemini-c1-infrastructure-defects.md
docs/plans/: 2026-02-25-phase-0-scaffolding.md  2026-02-25-phase-1-statistical-core.md  2026-02-28-v01-integration-and-launch.md  2026-02-28-v01-launch-design.md  2026-03-02-docs-audit-design.md  2026-03-02-docs-audit-implementation.md  2026-03-02-phase-1.5-launch-packaging.md  blog-post-outline.md
docs/research/: c2-model-quality-dominance.md  consensus-c1-paper-metadata.csv  gemini-C2-MLX Infrastructure vs. Model Limitations.md
scripts/: sync-mlx-docs.sh
src/mlx_triage/: __init__.py  cli.py  config.py  models.py  report.py  traits.py
src/mlx_triage/data/: known_bugs.yaml
src/mlx_triage/prompts/: standard_suite.py
src/mlx_triage/tier0/: __init__.py  architecture_check.py  dtype_check.py  tokenizer_check.py  version_check.py  weight_integrity.py
src/mlx_triage/tier1/: __init__.py  determinism.py  quantization_quality.py  reference_divergence.py
src/mlx_triage/tier2/: __init__.py  batch_invariance.py  context_length.py  memory_pressure.py
src/mlx_triage/utils/: backends.py  comparison.py  mlx_utils.py
tests/: conftest.py  test_backends.py  test_cli.py  test_cli_e2e.py  test_comparison.py  test_config.py  test_mlx_utils.py  test_models.py  test_prompts.py  test_report.py  test_tier0_architecture.py  test_tier0_dtype.py  test_tier0_runner.py  test_tier0_tokenizer.py  test_tier0_version.py  test_tier0_weights.py  test_tier1_determinism.py  test_tier1_divergence.py  test_tier1_quantization.py  test_tier1_runner.py  test_tier2_checks.py  test_tier2_runner.py  test_traits.py
