[project]
name = "mlx-triage"
version = "0.1.0"
description = "MLX Inference Quality Diagnostic Toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "safetensors>=0.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.20",
    "mlx-lm>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
mlx-triage = "mlx_triage.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_triage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
