[project]
name = "mlx-triage"
version = "0.1.1"
description = "MLX Inference Quality Diagnostic Toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Swaylen Hayes"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "safetensors>=0.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.20",
    "mlx-lm>=0.20",
]
reference = [
    "transformers>=4.40",
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
mlx-triage = "mlx_triage.cli:cli"

[project.urls]
Homepage = "https://github.com/swaylenhayes/mlx-triage"
Repository = "https://github.com/swaylenhayes/mlx-triage"
"Bug Tracker" = "https://github.com/swaylenhayes/mlx-triage/issues"
Documentation = "https://github.com/swaylenhayes/mlx-triage#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_triage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
